--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
@@ -15,11 +14,9 @@ android {
         targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    androidExtensions {
-        experimental = true
-    }
     buildFeatures {
         compose true
+        viewBinding true
     }
     buildTypes {
         release {
@@ -149,6 +146,8 @@ dependencies {
     implementation 'androidx.compose.animation:animation:1.1.0'
     implementation 'androidx.compose.ui:ui-tooling:1.1.0'
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.23.0"
+
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "com.google.truth:truth:1.1.3"
