--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
         }
         debug_beta {
             initWith release
-            debuggable true
+            debuggable false
             versionNameSuffix "-beta"
             applicationIdSuffix ".debug"
             buildConfigField 'String', 'CONFIG_ENVIRONMENT', '\"prod\"'
@@ -80,8 +80,8 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     implementation 'com.tangem:blockchain:develop-64'
-    implementation 'com.tangem.tangem-sdk-kotlin:core:develop-137'
-    implementation 'com.tangem.tangem-sdk-kotlin:android:develop-137'
+    implementation 'com.tangem.tangem-sdk-kotlin:core:develop-139'
+    implementation 'com.tangem.tangem-sdk-kotlin:android:develop-139'
 
     // WebView
     implementation "androidx.browser:browser:1.3.0"
