--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.aar'], dir: 'libs')
+    implementation implementation(project(path: ':domain'))
+    // TODO: refactoring: only for backwards compatibility with non-relocated services to the network module
+    implementation implementation(project(path: ':network'))
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -120,6 +123,7 @@ dependencies {
     implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
 
     // Network and Json
+    //TODO: refactoring: remove it when all network services moved to the network module
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
     implementation 'com.squareup.moshi:moshi:1.12.0'
@@ -143,10 +147,10 @@ dependencies {
 
     //Compose
     implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'androidx.compose.material:material:1.1.0'
-    implementation 'androidx.compose.animation:animation:1.1.0'
-    implementation 'androidx.compose.ui:ui-tooling:1.1.0'
-    implementation "com.google.accompanist:accompanist-appcompat-theme:0.23.0"
+    implementation "androidx.compose.material:material:1.1.1"
+    implementation 'androidx.compose.animation:animation:1.1.1'
+    implementation 'androidx.compose.ui:ui-tooling:1.1.1'
+    implementation "com.google.accompanist:accompanist-appcompat-theme:0.23.1"
 
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6'
 
