--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
+ext.configVar = [
+        configEnvironment: "CONFIG_ENVIRONMENT",
+        testActionEnabled: "TEST_ACTION_ENABLED",
+]
+
 android {
     compileSdkVersion 31
     defaultConfig {
@@ -13,19 +18,14 @@ android {
         minSdkVersion 21
         targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'Boolean', configVar.testActionEnabled, 'false'
     }
     buildFeatures {
         compose true
         viewBinding true
     }
     buildTypes {
-        release {
-            debuggable false
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.debug
-            buildConfigField 'String', 'CONFIG_ENVIRONMENT', '\"prod\"'
-        }
         debug {
             debuggable true
             minifyEnabled false
@@ -34,14 +34,24 @@ android {
             firebaseCrashlytics {
                 mappingFileUploadEnabled false
             }
-            buildConfigField 'String', 'CONFIG_ENVIRONMENT', '\"dev\"'
+            buildConfigField 'String', configVar.configEnvironment, '\"dev\"'
+            buildConfigField 'Boolean', configVar.testActionEnabled, 'true'
         }
         debug_beta {
             initWith release
             debuggable false
             versionNameSuffix "-beta"
             applicationIdSuffix ".debug"
-            buildConfigField 'String', 'CONFIG_ENVIRONMENT', '\"prod\"'
+            buildConfigField 'String', configVar.configEnvironment, '\"prod\"'
+            buildConfigField 'Boolean', configVar.testActionEnabled, 'false'
+        }
+        release {
+            debuggable false
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+            buildConfigField 'String', configVar.configEnvironment, '\"prod\"'
+            buildConfigField 'Boolean', configVar.testActionEnabled, 'false'
         }
     }
     kotlinOptions {
