--- a/core/featuretoggles/src/main/assets/configs/feature_toggles_config.json
+++ b/core/featuretoggles/src/main/assets/configs/feature_toggles_config.json
@@ -14,5 +14,9 @@
     {
         "name": "REDESIGNED_SEND_SCREEN_ENABLED",
         "version": "undefined"
+    },
+    {
+        "name": "GENERAL_USER_WALLETS_LIST_MANAGER_ENABLED",
+        "version": "5.7.0"
     }
 ]
