--- a/core/featuretoggles/src/main/assets/configs/feature_toggles_config.json
+++ b/core/featuretoggles/src/main/assets/configs/feature_toggles_config.json
@@ -18,5 +18,9 @@
     {
         "name": "GENERAL_USER_WALLETS_LIST_MANAGER_ENABLED",
         "version": "5.7.0"
+    },
+    {
+        "name": "LOCAL_USER_LOGS_ENABLED",
+        "version": "5.8.0"
     }
 ]
