--- a/gradle/dependencies.toml
+++ b/gradle/dependencies.toml
@@ -85,9 +85,9 @@ web3j = "4.10.1"
 # endregion Other libraries
 
 # region Tangem
-tangemBlockchainSdk = "develop-514"
+tangemBlockchainSdk = "release-app_5.8-515"
 #tangemBlockchainSdk = "0.0.1" # Keep it! - used for local builds
-tangemCardSdk = "develop-332"
+tangemCardSdk = "release-app_5.8-333"
 #tangemCardSdk = "0.0.1" # Keep it! - used for local builds ^
 # endregion Tangem
 
