--- a/gradle/tangem_dependencies.toml
+++ b/gradle/tangem_dependencies.toml
@@ -5,13 +5,12 @@
 # https://github.com/tangem/tangem-sdk-android/
 # https://github.com/tangem/vico
 
-tangemBlockchainSdk = "releases-5.28-1226"
-#tangemBlockchainSdk = "0.0.1" # Keep it! - used for local builds
-tangemCardSdk = "releases-5.28-563"
+tangemBlockchainSdk = "develop-1229"
+tangemCardSdk = "develop-561"
 #tangemCardSdk = "0.0.1" # Keep it! - used for local builds ^
 tangemVico = "2.0.0-alpha.25-tangem12"
 #tangemVico = "0.0.1" # Keep it! - used for local builds ^
-tangemHotSdk = "develop-461"
+tangemHotSdk = "develop-528"
 #tangemHotSdk = "0.0.1" # Keep it! - used for local builds ^
 
 
