--- a/core/config-toggles/src/main/assets/configs/feature_toggles_config.json
+++ b/core/config-toggles/src/main/assets/configs/feature_toggles_config.json
@@ -57,7 +57,7 @@
     },
     {
         "name": "NEW_ONRAMP_MAIN_ENABLED",
-        "version": "undefined"
+        "version": "5.29.0"
     },
     {
         "name": "ACCOUNTS_FEATURE_ENABLED",
