--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,17 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=1g -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx8g -Xms3g -XX:MaxMetaspaceSize=5g -XX:MetaspaceSize=1g -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1HeapRegionSize=16m -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
+org.gradle.daemon=false
 org.gradle.parallel=true
-org.gradle.workers.max=8
-org.gradle.daemon=true
-org.gradle.caching=true
-org.gradle.configuration-cache=true
+org.gradle.workers.max=6
+org.gradle.console=plain
+org.gradle.caching=false
+org.gradle.configuration-cache=false
 
 android.useAndroidX=true
 android.nonTransitiveRClass=false
-
+android.aapt2FromMavenOverride=/opt/android-sdk/build-tools/35.0.0/aapt2
+                  
 kotlin.incremental=true
+kotlin.incremental.usePreciseJavaTracking=true
+kotlin.compiler.execution.strategy=in-process
+
