--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx8g -Xms3g -XX:MaxMetaspaceSize=5g -XX:MetaspaceSize=1g -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1HeapRegionSize=16m -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
-org.gradle.daemon=false
 org.gradle.parallel=true
-org.gradle.workers.max=6
+org.gradle.workers.max=7
+org.gradle.daemon=false
 org.gradle.console=plain
 org.gradle.caching=false
 org.gradle.configuration-cache=false
@@ -10,5 +10,5 @@ org.gradle.configuration-cache=false
 android.useAndroidX=true
 android.nonTransitiveRClass=false
 android.aapt2FromMavenOverride=/opt/android-sdk/build-tools/35.0.0/aapt2
-                  
-kotlin.incremental=true
+
+kotlin.incremental=false
