--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-org.gradle.jvmargs=-Xmx8g -Xms3g -XX:MaxMetaspaceSize=5g -XX:MetaspaceSize=1g -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1HeapRegionSize=16m -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx8g -Xms8g -XX:MaxMetaspaceSize=3g -XX:MetaspaceSize=1g -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1HeapRegionSize=16m -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 org.gradle.parallel=true
 org.gradle.workers.max=7
-org.gradle.daemon=false
+org.gradle.daemon=true
 org.gradle.console=plain
 org.gradle.caching=false
 org.gradle.configuration-cache=false
